           GL_OES_depth24 and GL_OES_depth32
- Feature: The plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" is now also able to load in complete scenes (without merging everything into one huge mesh)
- Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
- Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
- Change: Updated FMOD Ex from version "4.32.08" to "4.36.04" (has Android support)
- Change: Updated sample sound files to make them work with FMOD Ex as well
- Bugfix: Loop and 2D are now working within the FMOD Ex sound backend
- Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture decompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
- Bugfix: "PLEngine::EngineApplication": The clear color hint within scenes was broken
- Bugfix (Windows): "PLFrontendOS::OSWindowWindows::SetPositionSize()" was not setting the window size correctly (the window border must be ignored)
- Bugfix (Linux): "PLFrontendOS::OSWindowLinux::GetX()" & "PLFrontendOS::OSWindowLinux::GetY()" were not returning the window position correctly (window decoration issue)
- Bugfix: "PLFrontendPLGui" was not returning and setting the window size correctly (the window border must be ignored)
- Bugfix: "PLInput::Keyboard" & "PLInput::VirtualStandardController": Fixed naming mix up between "Return" and "Enter", it's now always "Return" (in PixelLight, there's no difference between those two keys)
- Bugfix: Uncompressed dds images with mipmaps and "DDS_LINEARSIZE" set were not loaded correctly


Changes in PixelLight 0.9.8-R1 (released on August 23, 2011 - one year after the first public PixelLight release and nearly 9 years after development start on September 16, 2002)