@@ -1,3 +1,10 @@
+>> 01.10.2011
+[CO]
+- Windows: PLFrontendQt includes simplification: "Include\Qt" instead of "Include\Qt\Qt" (when building Qt, an additional install step was required to make real Qt headers,
+  not headers just redirecting into the "src"-directory)
+
+
+
 >> 27.09.2011
 [CO]
 - More fine tuning on "PLFrontendOS" & "PLFrontendQt" & "PLFrontendPLGui": When making the window visible, it's now also made active at once. If this is not done, debugging
