@@ -6,6 +6,7 @@ Changes in PixelLight 0.9.9-R1 (not yet released)
            GL_OES_depth24 and GL_OES_depth32
 - Feature: The plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" is now also able to load in complete scenes (without merging everything into one huge mesh)
 - Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
+- Change (Windows): "PLFrontendQt" includes simplification: "Include\Qt" instead of "Include\Qt\Qt"
 - Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
 - Change: Updated FMOD Ex from version "4.32.08" to "4.36.04" (has Android support)
 - Change: Updated sample sound files to make them work with FMOD Ex as well
